--- a/app/src/main/res/layout/activity_media_picker.xml
+++ b/app/src/main/res/layout/activity_media_picker.xml
@@ -6,8 +6,7 @@
 
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="?android:colorBackground">
+        android:layout_height="match_parent">
 
         <androidx.appcompat.widget.LinearLayoutCompat
             android:layout_width="match_parent"
