--- a/core/src/main/res/values/attrs.xml
+++ b/core/src/main/res/values/attrs.xml
@@ -71,6 +71,7 @@
 
     <!-- 顶部应用栏布局子项配置 -->
     <declare-styleable name="TopAppBarLayout_Layout">
+        <attr name="fitsDisplayCutout" format="boolean" />
         <attr name="isTopAppBarChild" format="boolean" />
         <attr name="isAppBarLayoutChild" format="boolean" />
         <attr name="layout_scrollFlags" />
